# json2tab

./: .flakeheaven.toml  .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  run_overpass_query.sh  update.md
.github/actions/setup-github-credentials/: action.yml
.github/workflows/: linting.yaml  tests.yaml
docs/: nehterlands-800.ods  vestas-v90-ct-curves.ods
json2tab/: AutoIncrementTypeIndexGenerator.py  DefaultTurbineSelector.py  DimensionLocationMapper.py  DomainConfig.py  ModelDesignationDeriver.py  ModelNameBuilder.py  ModelNameParser.py  ProbabilisticMapper.py  README.md  SimpleVisualizer.py  SpecsE101.py  Turbine.py  TurbineCurveLoader.py  TurbineLocationManager.py  TurbineLocationTabFileWriter.py  TurbineMatcher.py  TurbineTypeManager.py  TurbineTypeTabFileWriter.py  TurbineVisualizer.py  WindTurbineLocationProcessorVisualizer.py  __main__.py  get_wf101_manufacturer.py  json2tab.py  logs.py  turbine_utils.py  utils.py
json2tab/io/: readers.py  save_dataframe_as_csv.py  save_dataframe_as_geojson.py  write_statistics.py  writers.py
json2tab/location_converters/: LocationMerger.py  MergeStrategy.py  MixStrategy.py  TurbineWindfarmMapper.py  cleanup_short_distance_turbines.py  convert_between_csv_geojson.py  converter.py  country_filters.py  country_offshore_flag_fixer.py  csv_to_csv.py  duplicate_remover.py  get_lat_lon_matrix.py  osm_data_fetcher.py  overpass_query_builder.py  short_distance_remover.py  wf101_location_converter.py
json2tab/location_converters/country_data/: austria.py  denmark.py  finland.py  flanders.py  germany.py  italy.py  netherlands.py  sweden.py  thewindpower.py  united_kingdom.py
json2tab/tools/: KnmiTurbineDatabaseWriter.py  Location2CountryConverter.py  WindTurbineLocationMerger.py
json2tab/turbine_filters/: TurbineGeoFilterer.py  TurbineTimeFilterer.py
json2tab/turbine_filters/subsetting_handlers/: BoundingBoxHandler.py  CountryHandler.py  DomainHandler.py  LatLonBasedCountryHandler.py  TrueHandler.py
static_data/: known_knmi_mapping.csv  known_wf101_mapping.csv  query_windpowerplants.overpass  query_windturbines.overpass  turbine_database+knmi.json  turbine_database+wf101.json  turbine_specifications+belgian.csv
tests/unit/: test_location2country.py
tools/fortran2tab/: Makefile  convert.py  get_manufacturer.F90  main.F90  windturbine_type.F90
